--- a/rest-graph/src/main/resources/META-INF/resources/index.html
+++ b/rest-graph/src/main/resources/META-INF/resources/index.html
@@ -1,176 +1,84 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>rest-graph - 1.0.0-SNAPSHOT</title>
-    <style>
-        h1, h2, h3, h4, h5, h6 {
-            margin-bottom: 0.5rem;
-            font-weight: 400;
-            line-height: 1.5;
-        }
-
-        h1 {
-            font-size: 2.5rem;
-        }
-
-        h2 {
-            font-size: 2rem
-        }
-
-        h3 {
-            font-size: 1.75rem
-
-        }
-
-        h4 {
-            font-size: 1.5rem
-        }
-
-        h5 {
-            font-size: 1.25rem
-        }
-
-        h6 {
-            font-size: 1rem
-        }
-
-        .lead {
-            font-weight: 300;
-            font-size: 2rem;
-        }
-
-        .banner {
-            font-size: 2.7rem;
-            margin: 0;
-            padding: 2rem 1rem;
-            background-color: #0d1c2c;
-            color: white;
-        }
-
-        body {
-            margin: 0;
-            font-family: -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-        }
-
-        code {
-            font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-            font-size: 87.5%;
-            color: #e83e8c;
-            word-break: break-word;
-        }
-
-        .left-column {
-            padding: .75rem;
-            max-width: 75%;
-            min-width: 55%;
-        }
-
-        .right-column {
-            padding: .75rem;
-            max-width: 25%;
-        }
-
-        .container {
-            display: flex;
-            width: 100%;
-        }
-
-        li {
-            margin: 0.75rem;
-        }
-
-        .right-section {
-            margin-left: 1rem;
-            padding-left: 0.5rem;
-        }
-
-        .right-section h3 {
-            padding-top: 0;
-            font-weight: 200;
-        }
-
-        .right-section ul {
-            border-left: 0.3rem solid #71aeef;
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        .provided-code {
-            border-left: 0.3rem solid #71aeef;
-            padding-left: 10px;
-        }
-
-        .provided-code h3 {
-            font-weight: 200;
-        }
-    </style>
+<!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8">
+    <title>Windup APIs</title>
+    <link rel="stylesheet" type="text/css"
+          href="https://cdnjs.cloudflare.com/ajax/libs/patternfly/3.24.0/css/patternfly.min.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://cdnjs.cloudflare.com/ajax/libs/patternfly/3.24.0/css/patternfly-additions.min.css">
 </head>
 <body>
-
-<div class="banner lead">
-    Your new Cloud-Native application is ready!
-</div>
-
-<div class="container">
-    <div class="left-column">
-        <p class="lead"> Congratulations, you have created a new Quarkus cloud application.</p>
-
-        <h2>What is this page?</h2>
-
-        <p>This page is served by Quarkus. The source is in
-            <code>src/main/resources/META-INF/resources/index.html</code>.</p>
-
-        <h2>What are your next steps?</h2>
-
-        <p>If not already done, run the application in <em>dev mode</em> using: <code>./mvnw compile quarkus:dev</code>.
-        </p>
-        <ul>
-            <li>Your static assets are located in <code>src/main/resources/META-INF/resources</code>.</li>
-            <li>Configure your application in <code>src/main/resources/application.properties</code>.</li>
-            <li>Quarkus now ships with a <a href="/q/dev/">Dev UI</a> (available in dev mode only)</li>
-            <li>Play with the provided code located in <code>src/main/java</code>:</li>
-        </ul>
-                <div class="provided-code">
-            <h3>RESTEasy JAX-RS</h3>
-            <p>Easily start your RESTful Web Services</p>
-            <p><code>@Path: <a href="/analysis" class="path-link" target="_blank">/analysis</a></code></p>
-            <p><a href="https://quarkus.io/guides/getting-started#the-jax-rs-resources" class="guide-link" target="_blank">Related guide section...</a></p>
-        </div>
-
-    </div>
-    <div class="right-column">
-        <div class="right-section">
-            <h3>Application</h3>
-            <ul>
-                <li>GroupId: <code>io.mrizzi</code></li>
-                <li>ArtifactId: <code>rest-graph</code></li>
-                <li>Version: <code>1.0.0-SNAPSHOT</code></li>
-                <li>Quarkus Version: <code>2.2.1.Final</code></li>
-            </ul>
-        </div>
-        <div class="right-section">
-            <h3>Do you like Quarkus?</h3>
-            <ul>
-                <li>Go give it a star on <a href="https://github.com/quarkusio/quarkus">GitHub</a>.</li>
-            </ul>
-        </div>
-        <div class="right-section">
-            <h3>Selected extensions guides</h3>
-            <ul>
-                <li title="REST endpoint framework implementing JAX-RS and more"><a href="https://quarkus.io/guides/rest-json" target="_blank">RESTEasy JAX-RS guide</a></li>
-            </ul>
-        </div>
-        <div class="right-section">
-            <h3>More reading</h3>
-            <ul>
-                <li><a href="https://quarkus.io/guides/maven-tooling.html" target="_blank">Setup your IDE</a></li>
-                <li><a href="https://quarkus.io/guides/getting-started.html" target="_blank">Getting started</a></li>
-                <li><a href="https://quarkus.io/guides/" target="_blank">All guides</a></li>
-                <li><a href="https://quarkus.io" target="_blank">Quarkus Web Site</a></li>
-            </ul>
+    <div class="container">
+        <div class="card">
+            <div class="card-body">
+                <h2 class="card-title">Analysis</h2>
+                <h3 class="card-title">Sample Configuration</h3>
+                <button class="btn btn-info" id="request-sample-analysis">Request Analysis with sample configuration</button>
+                <h3 class="card-title">Custom Configuration</h3>
+                <form id="request-analysis-form">
+                    <label for="application">Choose the application to be analyzed *</label>
+                    <input type="file" id="application" name="application">
+                    <input id="applicationFileName" type="hidden" name="applicationFileName" value=""/>
+                    <label for="sources">Provide the analysis sources (comma-separated)</label>
+                    <input type="text" id="sources" name="sources" size="50">
+                    <br/>
+                    <label for="targets">Provide the analysis targets (comma-separated) *</label>
+                    <input type="text" id="targets" name="targets" value="eap7,cloud-readiness,quarkus,rhr" size="50">
+                    <br/>
+                    <label for="packages">Provide the analysis packages (comma-separated)</label>
+                    <input type="text" id="packages" name="packages" size="50">
+                    <br/>
+                    <label for="sourceMode">Check if application's source code is provided</label>
+                    <input type="checkbox" id="sourceMode" name="sourceMode">
+                </form>
+                <button class="btn btn-info" id="request-analysis">Request Analysis with custom configuration</button>
+                <h3 class="card-title">Executions</h3>
+                <div class="analysis"></div>
+            </div>
         </div>
     </div>
-</div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $("#request-sample-analysis").click((event) => {
+        fetch("/windup/trigger", {method: "GET"})
+            .then(res => res.headers.get("Analysis-Id"))
+            .then(analysisId => {
+                var row = $(`<h4 class='col-md-12' id='${analysisId}'>Analysis #<i>${analysisId}</i>: <strong>Pending</strong></h4>`);
+                $(".analysis").append(row);
+            });
+    });
+    $("#request-analysis").click((event) => {
+        event.preventDefault();
+        fetch("/windup/analysis", {
+            method: "POST",
+            body: new FormData(document.getElementById("request-analysis-form"))
+            })
+            .then(res => {
+                if (!res.ok) {
+                    alert(`Failure in triggering the analysis (Status ${res.status})`);
+                }
+                return res.headers.get("Analysis-Id");
+            })
+            .then(analysisId => {
+                var row = $(`<h4 class='col-md-12' id='${analysisId}'>Analysis #<i>${analysisId}</i>: <strong>Pending</strong></h4>`);
+                $(".analysis").append(row);
+            });
+    });
+    var source = new EventSource("/windup/analysisSse/");
+    source.onmessage = (event) => {
+        var json = JSON.parse(event.data);
+        console.log("event received " + json.state);
+/*        $(`#${json.id}`).html(function(index, html) {
+            return html.replace("Pending", `\$\xA0${json.state}`);
+        });*/
+        $(`#${json.id} strong`).text(`${json.state}\xA0[${json.workCompleted}\\${json.totalWork + 1}]`);
+        if (json.state === 'MERGED') {
+            var issues = $(`<a href='/windup/analysis/${json.id}/issues' target='_blank'>Issues</a>`)
+            $(`#${json.id}`).append(issues);
+        }
+    };
+    document.getElementById('application').onchange = function () {
+        document.getElementById('applicationFileName').value = this.files.item(0).name;
+    };
+</script>
 </html>
+
