--- a/rest-graph/src/main/resources/META-INF/resources/index.html
+++ b/rest-graph/src/main/resources/META-INF/resources/index.html
@@ -10,6 +10,7 @@
         <div class="card">
             <div class="card-body">
                 <h2 class="card-title">Analysis</h2>
+                <a href="/q/swagger-ui" target="_blank">OpenAPI with Swagger UI</a>
                 <h3 class="card-title">Sample Configuration</h3>
                 <button class="btn btn-info" id="request-sample-analysis">Request Analysis with sample configuration</button>
                 <h3 class="card-title">Custom Configuration</h3>
