--- a/rest-graph/src/main/resources/META-INF/resources/index.html
+++ b/rest-graph/src/main/resources/META-INF/resources/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html> <html lang="en"> <head> <meta charset="UTF-8">
     <title>Windup APIs</title>
-    <link rel="stylesheet" type="text/css"
+<!--    <link rel="stylesheet" type="text/css"
           href="https://cdnjs.cloudflare.com/ajax/libs/patternfly/3.24.0/css/patternfly.min.css">
     <link rel="stylesheet" type="text/css"
-          href="https://cdnjs.cloudflare.com/ajax/libs/patternfly/3.24.0/css/patternfly-additions.min.css">
+          href="https://cdnjs.cloudflare.com/ajax/libs/patternfly/3.24.0/css/patternfly-additions.min.css">-->
     <style>
         h1, h2, h3, h4, h5, h6 {
             margin-bottom: 0.5rem;
@@ -118,6 +118,7 @@
                 <div class="card-body">
                     <h2 class="card-title">Sample Configuration</h2>
                     <div class="provided-code">
+                        <p>Application analyzed is <a href="samples/jee-example-app-1.0.0.ear">jee-example-app-1.0.0.ear</a> with the targets Red Hat JBoss EAP, Quarkus, Cloud-readiness and Red Hat Runtimes.</p>
                         <button class="btn btn-info" id="request-sample-analysis">Request Analysis with sample configuration</button>
                     </div>
                 </div>
@@ -130,6 +131,7 @@
                             <label for="application">Choose the application to be analyzed *</label>
                             <input type="file" id="application" name="application">
                             <input id="applicationFileName" type="hidden" name="applicationFileName" value=""/>
+                            <br/>
                             <label for="sources">Provide the analysis sources (comma-separated)</label>
                             <input type="text" id="sources" name="sources" size="50">
                             <br/>
@@ -187,7 +189,7 @@
                 return res.headers.get("Analysis-Id");
             })
             .then(analysisId => {
-                var row = $(`<h4 class='col-md-12' id='${analysisId}'>Analysis #<i>${analysisId}</i>: <strong>Pending</strong></h4>`);
+                var row = $(`<h3 class='col-md-12' id='${analysisId}'>Analysis #<i>${analysisId}</i>: <strong>Pending</strong></h3>`);
                 $(".analysis").append(row);
             });
     });
