--- a/qute/src/main/resources/META-INF/resources/chat.html
+++ b/qute/src/main/resources/META-INF/resources/chat.html
@@ -43,8 +43,8 @@
 
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="/webjars/jquery/dist/jquery.min.js"></script>
+<script src="/webjars/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/patternfly/3.24.0/js/patternfly.min.js"></script>
 
 <script type="text/javascript">
